# acceleration_collector

./: .gitignore  CMakeLists.txt  README.md  acceleration_collector.c  bootsel_button.c  bootsel_button.h  mma8451_i2c.c  mma8451_i2c.h
